[package]
name = "pdvzip_rs"
version = "4.7.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "pdvzip-rs"
path = "src/main.rs"

[dependencies]
crc32fast = "1.5"
flate2 = "1.1"
libc = "0.2"
png = "0.17.16"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
strip = "symbols"
